# Operating-Systems-Project

./: .gitignore
net-monitor/: Cargo.toml
net-monitor/backend/: Cargo.toml
net-monitor/backend/src/: aggregator.rs  alert.rs  capture.rs  filter.rs  history.rs  ipc.rs  main.rs  output.rs  parser.rs  proc_attr.rs
net-monitor/gui/: Cargo.toml
net-monitor/gui/src/: app.rs  chart.rs  data.rs  export.rs  main.rs  view.rs
net-monitor/tui/: Cargo.toml
net-monitor/tui/src/: main.rs
