[package]
name = "gui"
version = "0.1.0"
edition = "2021"
 
[dependencies]
iced = { version = "0.13", features = ["canvas", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
csv = "1"
 
# Force X11 on WSL / headless Linux (no Wayland compositor available)
[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", features = ["x11"] }
 
